Add a disable mode in the bot for post May 11 2020 operation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "ivy2:/root/.ivy2"
   db:
     image: couchdb:2.3.0
-    restart: always
+    restart: unless-stopped
     volumes:
       - "./couchdb-volume:/opt/couchdb/data"
 
