--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,9 @@ ausweis {
   database = "http://localhost:5984/ausweis"
   interactive-stop = false
 
+  // Set to true to only answer that the bot is disabled
+  disabled = false
+
   // Fill this to get debugging traces on Telegram
   // debug {
   //   telegram-token = XXX
