--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -1,4 +1,2 @@
-status = [
-  "continuous-integration/travis-ci/push",
-]
+status = [ "tests/test", "tests/package" ]
 delete_merged_branches = true
