--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
 jobs:
   test:
+    name: Unit tests
     runs-on: ubuntu-latest
     steps:
       - name: Get Ivy2 cache
@@ -22,6 +23,7 @@ jobs:
         with:
           commands: test
   package:
+    name: Docker packaging
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
