Run tests with bors only, they can be run locally otherwise

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,9 @@
-name: tests
+name: Validation process
 on:
   push:
     branches:
       - staging
       - trying
-  pull_request:
 jobs:
   test:
     name: Unit tests
