--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ ausweis {
   disabled = false
 
   // Rate limiting of incoming requests per user
-  interrequest-delay = 1 second
+  inter-request-delay = 1 second
   max-queued-requests = 5
 
   // Fill this to get debugging traces on Telegram
