--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           mill-version: 0.9.5
       - name: Publish bot4s/telegram locally
-        run: cd external/bot4s-telegram && mill 'core.jvm[_].publishLocal'
+        run: cd external/bot4s-telegram && mill '{akka,core}.jvm[_].publishLocal'
       - name: SBT tests and artifacts
         uses: lokkju/github-action-sbt@master
         with:
