--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -33,10 +33,20 @@ jobs:
           key: ivy2-files
       - name: Checkout
         uses: actions/checkout@v2
-      - name: SBT artifacts
-        uses: lokkju/github-action-sbt@master
+      - name: Setup Scala
+        uses: olafurpg/setup-scala@v10
         with:
-          commands: assembly genCommands
+          java-version: "adopt@1.8"
+      - name: Coursier cache
+        uses: coursier/cache-action@v5
+      - name: Setup mill
+        uses: jodersky/setup-mill@master
+        with:
+          mill-version: 0.9.5
+      - name: Publish bot4s/telegram locally
+        run: cd external/bot4s-telegram && mill '{akka,core}.jvm[_].publishLocal'
+      - name: SBT artifacts
+        run: sbt assembly genCommands
       - name: Upload ausweis.jar artifact
         uses: actions/upload-artifact@v2
         with:
